<resources>
    <string name="app_name">SISTec Students</string>
    <string name="erp_website"><b><i><u>erp.sgibhopal.com</u></i></b></string>
    <string name="welcome_greeting">Welcome To SISTec Student Portal (ERP)</string>
    <string name="connecting">Connecting to Server&#8230;</string>
    <string name="login_to_erp">Login To SISTec ERP</string>
    <string name="enrl_num">Enrollment Number</string>
    <string name="password">Password</string>
    <string name="remember">Remember Me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="invalid_enrl">Invalid Enroll Num</string>
    <string name="title_home">Home</string>
    <string name="title_academic">Academic Records</string>
    <string name="title_view_attendance">View Attendance</string>
    <string name="title_fee_status">Fee Status</string>
    <string name="title_assignment_marks">Assignment Marks</string>
    <string name="title_midsem_marks">Midsem Marks</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Student Name</string>
    <string name="nav_header_subtitle">Enrollment number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_feedback">Feedback</string>
    <string name="log_out">Log out</string>

    <string name="user_image">User Image</string>

    <string name="student_name">Student Name</string>
    <string name="enrl_num_short">Enroll No</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="org">Organisation</string>
    <string name="personal_dtl">Personal Details</string>
    <string name="mother_name">Mother\'s Name</string>
    <string name="father_name">Father\'s Name</string>
    <string name="dob">DOB</string>
    <string name="category">Category</string>
    <string name="gender">Gender</string>
    <string name="contact">Contact Details</string>
    <string name="student_contact">Student\'s</string>
    <string name="parent_contact">Parent\'s</string>
    <string name="email">Email</string>
    <string name="permanent_add">Permanent Address</string>
    <string name="correspondence_add">Correspondence Address</string>
    <string name="locality">Locality</string>
    <string name="city">City</string>
    <string name="state">State</string>

    <string name="sem">Semester</string>
    <string name="year">Year</string>
    <string name="cgpa">CGPA</string>
    <string name="status">Status</string>

    <string name="qualifications">Qualifications</string>
    <string name="qualification">Qualification</string>
    <string name="yop">Passing yrear</string>
    <string name="board">Board</string>
    <string name="percentage">Percentage</string>
    <string name="medium">Medium</string>
    <string name="stream">Stream</string>

    <string name="old_pass">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="con_pass">Confirm Password</string>
    <string name="change_pass">Change Password</string>

    <string name="total_attendance">Total Attendance</string>
    <string name="total_class">Total Class</string>
    <string name="present">Present</string>
    <string name="percent">Percent</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_name">Subject Name</string>

    <string name="fee_type">Fee Type</string>
    <string name="first_inst">1st Inst</string>
    <string name="second_inst">2nd Inst</string>
    <string name="scholarship">Scholarship</string>
    <string name="payable">Payable</string>
    <string name="paid">Paid</string>
    <string name="dues">Dues</string>
    <string name="total_dues">Total Dues</string>

    <string name="please_select_subject">Please Select Subject</string>
    <string name="submit">Submit</string>
    <string name="assignment_num">ASSIGNMENT NUMBER</string>
    <string name="assignment_topic">Assignment Topic</string>
    <string name="max_marks">Max. Marks</string>
    <string name="marks_obtained">Marks Obtained</string>
    <string name="given_on">Given on</string>
    <string name="submitted_on">Submitted On</string>

    <string name="please_select_semester">Please Select Semester</string>
    <string name="please_select_exam_type">Please Select Exam Type</string>
    <string-array name="semester_array">
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
        <item>4th</item>
        <item>5th</item>
        <item>6th</item>
        <item>7th</item>
        <item>8th</item>
    </string-array>
    <string-array name="exam_type_array">
        <item>MST1</item>
        <item>MST2</item>
        <item>PUT</item>
        <item>ENDSEM</item>
    </string-array>
    <string name="exam_date">Exam Date</string>
    <string name="exam_attended">Exam Attended</string>


</resources>
