<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_acadmic"
            android:icon="@drawable/ic_acadmic_black_24dp"
            android:title="@string/title_academic" />
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/ic_attendance_black_24dp"
            android:title="@string/title_view_attendance" />
        <item
            android:id="@+id/nav_fee"
            android:icon="@drawable/ic_rupee_black_24px"
            android:title="@string/title_fee_status" />
        <item
            android:id="@+id/nav_assignment"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_assignment_marks" />
        <item
            android:id="@+id/nav_midsem"
            android:icon="@drawable/ic_midsem_black_24dp"
            android:title="@string/title_midsem_marks" />
        <item
            android:id="@+id/nav_change_pass"
            android:icon="@drawable/ic_password_black_24dp"
            android:title="@string/title_change_password" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_black_24dp"
            android:title="@string/title_about" />
    </group>

</menu>
