<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/startBackground"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="190dp"
        android:layout_height="250dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/welcome_greeting"
        android:scaleType="fitXY"
        android:src="@drawable/sistec_logo" />

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/welcome_greeting"
        android:textColor="@color/darkBlue"
        android:textSize="36dp" />

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="50dp">

            <EditText
                android:id="@+id/enroll_num"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_field"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/enrl_num"
                android:inputType="text"
                android:maxLength="12"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="1dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/edit_field"
                android:drawableStart="@drawable/ic_password_black_24dp"
                android:drawablePadding="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:paddingEnd="1dp"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/remember"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/forgot_pass"
                android:textColor="@color/darkBlue"
                android:textSize="16dp" />
        </LinearLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_enabled"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/connecting_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/conn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/connecting"
            android:textColor="@color/darkBlue"
            android:textSize="26dp" />
    </LinearLayout>

</LinearLayout>