<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/startBackground"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/user_image"
            android:src="@drawable/sistec_logo" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student Name"
                    style="@style/heading_style_big" />

                <View style="@style/divider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/enrl_num_short"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="0187CS151000"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/branch"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="CSE"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/org"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="SISTec GN"
                            style="@style/detail_style" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_dtl"
                    style="@style/heading_style_big" />

                <View style="@style/divider" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/mother_name"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="Mrs. My Mummy"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/father_name"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="Mr. My Papa"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/dob"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="DD/MM/YYYY"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/category"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="GEN/OBC/SC/ST"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/gender"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="Male/Female"
                            style="@style/detail_style" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/heading_style_big"
                    android:text="@string/contact" />

                <View style="@style/divider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/student_contact" />

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="9988445566" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/parent_contact" />

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="9988445566" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/email" />

                        <TextView
                            style="@style/detail_style"
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="abcd@abc.xyz" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    style="@style/heading_style_big"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permanent_add" />

                <View style="@style/divider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/locality"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="Vill/Area/Locality"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/city"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="City........"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/state"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="State......."
                            style="@style/detail_style" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/correspondence_add"
                    style="@style/heading_style_big" />

                <View style="@style/divider" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/locality"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="Vill/Area/Locality"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/city"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="City........"
                            style="@style/detail_style" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="2"
                            android:text="@string/state"
                            style="@style/detail_style" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="3"
                            android:text="State......."
                            style="@style/detail_style" />
                    </TableRow>
                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>