<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="8dp"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/subject_code_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/allTextColor"
            android:textSize="12sp"
            tools:text="@string/subject_code" />

        <TextView
            android:id="@+id/subject_name_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/allTextColor"
            android:textSize="18sp"
            tools:text="@string/subject_name" />

        <View style="@style/divider" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/total_class"
                android:textColor="@color/allTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/present"
                android:textColor="@color/allTextColor"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/percent"
                android:textColor="@color/allTextColor"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/classes_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/allTextColor"
                android:textSize="16sp"
                tools:text="@string/total_class" />

            <TextView
                android:id="@+id/present_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textColor="@color/allTextColor"
                android:textSize="16sp"
                tools:text="@string/present" />

            <TextView
                android:id="@+id/percent_TV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textColor="@color/allTextColor"
                android:textSize="16sp"
                tools:text="@string/percent" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>